@@ -530,9 +530,21 @@ _parse_state( char* str, uint32_t* states )
 	xstrcat(state_names, ",");
 	xstrcat(state_names, job_state_string(JOB_RESV_DEL_HOLD));
 	xstrcat(state_names, ",");
+	xstrcat(state_names, job_state_string(JOB_REQUEUE));
+	xstrcat(state_names, ",");
+	xstrcat(state_names, job_state_string(JOB_REQUEUE_FED));
+	xstrcat(state_names, ",");
+	xstrcat(state_names, job_state_string(JOB_REQUEUE_HOLD));
+	xstrcat(state_names, ",");
 	xstrcat(state_names, job_state_string(JOB_REVOKED));
 	xstrcat(state_names, ",");
+	xstrcat(state_names, job_state_string(JOB_SIGNALING));
+	xstrcat(state_names, ",");
 	xstrcat(state_names, job_state_string(JOB_SPECIAL_EXIT));
+	xstrcat(state_names, ",");
+	xstrcat(state_names, job_state_string(JOB_STAGE_OUT));
+	xstrcat(state_names, ",");
+	xstrcat(state_names, job_state_string(JOB_STOPPED));
 	error("Valid job states include: %s\n", state_names);
 	xfree (state_names);
 	return SLURM_ERROR;
