@@ -30,6 +30,7 @@ documents those changes that are of interest to users and administrators.
     in stage-in to not get state saved if slurmctld stopped.
  -- auth/jwt - print an error if jwt_file= has not been set in slurmdbd.
  -- Fix RESV_DEL_HOLD not being a valid state when using squeue --states.
+ -- Add missing squeue selectable states in valid states error message.
 
 * Changes in Slurm 20.11.5
 ==========================
